# medairian-digital

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  config.py  pyproject.toml  requirements.txt
content/: base.yml
content/pages/: about.yml  articles.yml  contact.yml  home.yml  projects.yml  skills.yml
content/projects/: acoustic-anomaly-detection.md  anomaly-detection-system.md  conversational-ai-chatbot.md  data-pipeline-automation.md  iab-category-recognition.md  iab-category-service.md  monitoring-system.md  reporting-dashboard.md  time-series-forecasting.md  tv-ads-attribution.md  user-segmentation.md
rag/: rag_chatbot.py
routes/: main_routes.py
static/css/: chat.css  main.css
static/js/: main.js
templates/: base.html  chat.html
templates/pages/: about.html  articles.html  contact.html  home.html  project_detail.html  projects.html  skills.html
utils/: content_loader.py
